--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,7 +2,7 @@
 <script language="Javascript" type="text/javascript">
   function search_google() {
     var query = document.getElementById("google-search").value;
-    window.open("http://google.com/search?q=" + query + "%20site:" + "http://bruceeckel.github.io");
+    window.open("http://google.com/search?q=" + query + "%20site:" + "http://rvvincelli.github.io");
   }
 </script>
 <!-- Target for toggling the sidebar `.sidebar-checkbox` is for regular
@@ -17,8 +17,6 @@
 
   <nav class="sidebar-nav">
     <div class="sidebar-nav-item">
-    <a href="{{ site.baseurl }}">Home</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.mindviewinc.com/About/Bruce.php" target="_blank">About</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.mindviewinc.com" target="_blank">Mindview</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="atom.xml" target="_blank">RSS</a><br/>
-    <a href="http://www.AtomicScala.com" target="_blank">Atomic Scala</a>&nbsp;&nbsp;|&nbsp;&nbsp;<a href="http://www.WinterTechForum.com" target="_blank">WTF</a><br/>
     Search: <form onsubmit="search_google()" ><input type="text" id="google-search"></form>
     </div>
     {% for post in site.posts %}
@@ -26,9 +24,4 @@
     {% endfor %}
   </nav>
 
-  <div class="sidebar-item">
-    <p>
-      &copy; {{ site.time | date: '%Y' }} Mindview LLC</br>All rights reserved
-    </p>
-  </div>
-</div>
+ </div>
