--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -1,27 +1,114 @@
-<!-- Google search function -->
-<script language="Javascript" type="text/javascript">
-  function search_google() {
-    var query = document.getElementById("google-search").value;
-    window.open("http://google.com/search?q=" + query + "%20site:" + "http://rvvincelli.github.io");
-  }
-</script>
 <!-- Target for toggling the sidebar `.sidebar-checkbox` is for regular
      styles, `#sidebar-checkbox` for behavior. -->
 <input type="checkbox" class="sidebar-checkbox" id="sidebar-checkbox">
 
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
+  
+  <div class="sidebar-logo">
+    <img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}?s=120" />
+  </div>
+
+<div id="contact-list" style="text-align:center">
+    {% if site.author.github %}
+      <a href="https://github.com/{{ site.author.github }}">
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-github-alt fa-stack-1x"></i>
+        </span>
+      </a>
+    {% endif %}
+
+    {% if site.author.twitter %}
+      <a href="https://twitter.com/{{ site.author.twitter }}">
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-twitter fa-stack-1x"></i>
+        </span>
+      </a>
+    {% endif %}
+
+    {% if site.author.linkedin %}
+      <a href="https://linkedin.com/in/{{ site.author.linkedin }}">
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-linkedin fa-stack-1x"></i>
+        </span>
+      </a>
+    {% endif %}
+</div>
+<div id="contact-list" style="text-align:center">
+    {% if site.author.facebook %}
+      <a href="https://facebook.com/{{ site.author.facebook }}">
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-book fa-stack-1x"></i>
+        </span>
+      </a>
+    {% endif %}
+    {% if site.author.scribd %}
+      <a href="http://scribd.com/{{ site.author.scribd }}">
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-user-md fa-stack-1x"></i>
+        </span>
+      </a>
+    {% endif %}
+    {% if site.author.youtube %}
+    <a href="http://youtube.com/{{ site.author.youtube }}">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-square-o fa-stack-2x"></i>
+        <i class="fa fa-google fa-stack-1x"></i>
+      </span>
+    </a>
+    {% endif %}
+</div>
+<div id="contact-list" style="text-align:center">
+    {% if site.author.email %}
+      <a href="mailto:{{ site.author.email }}">
+        <span class="fa-stack fa-lg">
+          <i class="fa fa-square-o fa-stack-2x"></i>
+          <i class="fa fa-envelope fa-stack-1x"></i>
+        </span>
+      </a>
+    {% endif %}
+    <a href="{{ site.BASE_PATH }}/atom.xml">
+      <span class="fa-stack fa-lg">
+        <i class="fa fa-square-o fa-stack-2x"></i>
+        <i class="fa fa-rss fa-stack-1x"></i>
+      </span>
+    </a>
+</div>
+
   <div class="sidebar-item">
     <p>{{ site.description }}</p>
   </div>
 
   <nav class="sidebar-nav">
-    <div class="sidebar-nav-item">
-    Search: <form onsubmit="search_google()" ><input type="text" id="google-search"></form>
-    </div>
-    {% for post in site.posts %}
-      <a class="sidebar-nav-item" href="{{ post.url }}">{{ post.date | date_to_string }} &raquo; {{ post.title }}</a>
+    <a class="sidebar-nav-item{% if page.url == site.baseurl %} active{% endif %}" href="/">Home</a>
+
+    {% comment %}
+      The code below dynamically generates a sidebar nav of pages with
+      `layout: page` in the front-matter. See readme for usage.
+    {% endcomment %}
+
+    {% assign pages_list = site.pages %}
+    {% for node in pages_list %}
+      {% if node.title != null %}
+        {% if node.layout == "page" %}
+          <a class="sidebar-nav-item{% if page.url == node.url %} active{% endif %}" href="{{ node.url }}">{{ node.title }}</a>
+        {% endif %}
+      {% endif %}
     {% endfor %}
+
+    <!-- <a class="sidebar-nav-item" href="{{ site.github.repo }}/archive/v{{ site.version }}.zip">Download</a>
+    <a class="sidebar-nav-item" href="{{ site.github.repo }}">GitHub project</a>
+    <span class="sidebar-nav-item">Currently v{{ site.version }}</span> -->
   </nav>
 
- </div>
+  <div class="sidebar-item">
+    <p>
+      &copy; {{ site.time | date: '%Y' }}. All rights reserved.
+    </p>
+  </div>
+</div>
