--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -6,7 +6,7 @@
 <div class="sidebar" id="sidebar">
   
   <div class="sidebar-logo">
-    <img src="http://www.gravatar.com/avatar/{{site.author.email_md5}}?s=120" />
+    <img src="{{ site.BASE_PATH }}/public/images/avatar.jpg" />
   </div>
 
 <div id="contact-list" style="text-align:center">
