--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,10 +5,6 @@
 <!-- Toggleable sidebar -->
 <div class="sidebar" id="sidebar">
   
-  <div class="sidebar-logo">
-    <img src="{{ site.BASE_PATH }}/public/images/avatar.jpg" />
-  </div>
-
 <div id="contact-list" style="text-align:center">
     {% if site.author.github %}
       <a href="https://github.com/{{ site.author.github }}">
@@ -29,7 +25,7 @@
     {% endif %}
 
     {% if site.author.linkedin %}
-      <a href="https://linkedin.com/in/{{ site.author.linkedin }}">
+      <a href="https://nl.linkedin.com/pub/{{ site.author.linkedin }}">
         <span class="fa-stack fa-lg">
           <i class="fa fa-square-o fa-stack-2x"></i>
           <i class="fa fa-linkedin fa-stack-1x"></i>
